--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\STUDENT\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=/home/student/.netbeans/20/build.properties
